renamed testing to acceptanceTesting
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14074 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
      <module>testFramework</module>
      <module>application</module>
      <module>webapp</module>
-     <module>testing</module>
+     <module>acceptanceTesting</module>
    </modules>
 
    <properties>
