Added new maven module userInterface to encapsulate the web based user interface by moving code and freemarker pages out of the application module.
Some additional refactoring is still needed for application context files, but it runs as is.


git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14077 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
    <modules>
      <module>testFramework</module>
      <module>application</module>
+     <module>userInterface</module>
      <module>webapp</module>
      <module>acceptanceTesting</module>
    </modules>
