Added serviceInterfaces maven module. Renamed AppInfo to ApplicationInformationDto. This is work in progress which breaks the build (committing to hand off).
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14084 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     
    <modules>
      <module>testFramework</module>
+     <module>serviceInterfaces</module>
      <module>application</module>
      <module>userInterface</module>
      <module>webapp</module>
