--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" output="testFramework/target/test-classes" path="testFramework/src/test/java"/>
+	<classpathentry kind="src" path="serviceInterfaces/src/main/java"/>
 	<classpathentry kind="src" output="acceptanceTesting/target/test-classes" path="acceptanceTesting/src/test/java"/>
 	<classpathentry kind="src" output="acceptanceTesting/target/test-classes" path="acceptanceTesting/src/test/resources"/>
 	<classpathentry kind="src" output="webapp/target/mifos/WEB-INF/css" path="webapp/src/main/webapp/css"/>
