--- a/userInterface/pom.xml
+++ b/userInterface/pom.xml
@@ -137,7 +137,7 @@
 	  </dependency>
    </dependencies>
    <build>
-      <finalName>mifos</finalName>
+      <finalName>cheetah-userInterface</finalName>
       <defaultGoal>jar</defaultGoal>
       <sourceDirectory>${modules.root.dir}/userInterface/src/main/java</sourceDirectory>
       <scriptSourceDirectory>${modules.root.dir}/userInterface/src/main/scripts</scriptSourceDirectory>
