--- a/serviceInterfaces/pom.xml
+++ b/serviceInterfaces/pom.xml
@@ -137,7 +137,11 @@
       <sourceDirectory>${modules.root.dir}/serviceInterfaces/src/main/java</sourceDirectory>
       <scriptSourceDirectory>${modules.root.dir}/serviceInterfaces/src/main/scripts</scriptSourceDirectory>
       <outputDirectory>target/classes</outputDirectory>
-
+      <resources>
+        <resource>
+           <directory>do-not-inherit-from-parent</directory>
+         </resource>
+      </resources>
       <plugins>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
