Moved properties files with messages from the application module to the userInterface module.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14122 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/userInterface/pom.xml
+++ b/userInterface/pom.xml
@@ -149,6 +149,7 @@
 	    	  <directory>src/main/resources</directory>
 	          <includes>
 	              <include>**/*.ftl</include>
+	              <include>**/*.properties</include>
 	          </includes>
 	      </resource>
 	  </resources>
