--- a/userInterface/pom.xml
+++ b/userInterface/pom.xml
@@ -159,6 +159,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
+               <!-- compile in Java debugging symbols -->
                <debug>true</debug>
                <source>1.6</source>
                <target>1.6</target>
