--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" output="testFramework/target/test-classes" path="testFramework/src/test/java"/>
+	<classpathentry kind="src" path="testFramework/src/main/resources"/>
 	<classpathentry kind="src" output="webapp/target/mifos/WEB-INF/classes" path="userInterface/src/main/resources"/>
 	<classpathentry kind="src" output="userInterface/target/test-classes" path="userInterface/src/test/java"/>
 	<classpathentry kind="src" path="userInterface/src/main/java"/>
 	<classpathentry kind="src" path="serviceInterfaces/src/main/java"/>
 	<classpathentry kind="src" output="acceptanceTesting/target/test-classes" path="acceptanceTesting/src/test/java"/>
-	<classpathentry kind="src" output="acceptanceTesting/target/test-classes" path="acceptanceTesting/src/test/resources"/>
 	<classpathentry kind="src" output="testFramework/target/classes" path="testFramework/src/main/java"/>
 	<classpathentry kind="src" output="webapp/target/mifos/WEB-INF/classes" path="application/src/main/java"/>
 	<classpathentry kind="src" output="application/target/test-classes" path="application/src/test/java"/>
