--- a/testFramework/pom.xml
+++ b/testFramework/pom.xml
@@ -73,7 +73,6 @@
          <groupId>org.testng</groupId>
          <artifactId>testng</artifactId>
          <version>5.8</version>
-         <scope>test</scope>
          <classifier>jdk15</classifier>
       </dependency>
       <dependency>
@@ -162,6 +161,11 @@
           <artifactId>dbunit</artifactId>
           <version>2.3.0</version>
       </dependency>   
+      <dependency>
+         <groupId>org.openqa.selenium.client-drivers</groupId>
+         <artifactId>selenium-java-client-driver</artifactId>
+         <version>1.0-SNAPSHOT</version>
+      </dependency>
    </dependencies>
    <build>
       <finalName>mifos</finalName>
