For the default database.local.overrides, point to a file that we know exists.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14170 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,9 @@
     <properties>
         <modules.root.dir>${basedir}</modules.root.dir>
         <database.properties.file>${modules.root.dir}/application/src/main/resources/jdbc.properties</database.properties.file>
-        <database.local.overrides>${user.home}/.mifos/mifos.local.properties</database.local.overrides> 
+        <!-- Override this property in M2_REPO/settings.xml to allow local
+        settings. -->
+        <database.local.overrides>${database.properties.file}</database.local.overrides> 
     </properties>
 
     <repositories>
