* fix property for selenium browser start command. Was using two different   property names, now it is selenium.browser.start.command everywhere * ignore testng detritus * use TestNG, not junit in SimpleDataSetTest, DatabaseTestUtilsTest * improve testFramework's ui-test-context.xml by directly reading properties it   needs, rather than importing dataSource.xml from whatever happens to provide   that file
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14176 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/acceptanceTesting/pom.xml
+++ b/acceptanceTesting/pom.xml
@@ -20,7 +20,7 @@
         <selenium.background>true</selenium.background>
         <tomcat.container.url>http://www.apache.org/dist/tomcat/tomcat-6/v${tomcat.version}/bin/apache-tomcat-${tomcat.version}.zip</tomcat.container.url>
         <cargo.wait>false</cargo.wait>
-        <selenium.start.browser.command>*firefox</selenium.start.browser.command>
+        <selenium.browser.start.command>*firefox</selenium.browser.start.command>
     </properties>
 
     <profiles>
@@ -120,7 +120,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <browser>${selenium.start.browser.command}</browser>
+                <browser>${selenium.browser.start.command}</browser>
             </properties>
         </profile>
         <profile>
