moving resources from testFramework to acceptanceTests - because testFramework doesn't directly use Spring or connect to the database
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14185 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/pom.xml
+++ b/pom.xml
@@ -229,7 +229,7 @@
             <!-- redundant to the resource directory above, but necessary for
             acceptance tests to be able to find their own resources. :( -->
             <resource>
-                <directory>src/main/resources</directory>
+                <directory>src/test/resources</directory>
             </resource>
         </resources>
         <pluginManagement>
