renamed acceptanceTesting module to acceptanceTests to match Gazelle project
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14189 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <module>application</module>
         <module>userInterface</module>
         <module>webapp</module>
-        <module>acceptanceTesting</module>
+        <module>acceptanceTests</module>
     </modules>
 
     <properties>
