--- a/acceptanceTests/src/test/resources/jdbc.properties
+++ b/acceptanceTests/src/test/resources/jdbc.properties
@@ -1,3 +1,4 @@
+! can we get rid of this in testFramework?
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/mifos_cheetah
 jdbc.username=root
