Initial work on a commandline tool for dumping Mifos MySQL data into dbunit formatted xml files.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14203 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/.project
+++ b/.project
@@ -64,6 +64,11 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>net.sourceforge.pmd.eclipse.plugin.pmdBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
@@ -74,5 +79,6 @@
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 		<nature>edu.umd.cs.findbugs.plugin.eclipse.findbugsNature</nature>
 		<nature>net.sourceforge.pmd.runtime.pmdNature</nature>
+		<nature>net.sourceforge.pmd.eclipse.plugin.pmdNature</nature>
 	</natures>
 </projectDescription>
