--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,11 @@
                 <artifactId>spring-security-taglibs</artifactId>
                 <version>2.0.2</version>
             </dependency>
+		    <dependency>
+		      	<groupId>commons-cli</groupId>
+		      	<artifactId>commons-cli</artifactId>
+		      	<version>1.1</version>
+		    </dependency>            
         </dependencies>
     </dependencyManagement>
 
