--- a/testFramework/pom.xml
+++ b/testFramework/pom.xml
@@ -166,6 +166,11 @@
          <artifactId>selenium-java-client-driver</artifactId>
          <version>1.0-SNAPSHOT</version>
       </dependency>
+      <dependency>
+	     <groupId>commons-cli</groupId>
+		 <artifactId>commons-cli</artifactId>
+		 <version>1.1</version>
+	  </dependency>          
    </dependencies>
    <build>
       <finalName>mifos</finalName>
