--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
     <properties>
         <modules.root.dir>${basedir}</modules.root.dir>
         <database.properties.file>${modules.root.dir}/application/src/main/resources/jdbc.properties</database.properties.file>
+        <sql.resources.src.directory>${modules.root.dir}/application/src/main/sql</sql.resources.src.directory>
+        <sql.resources.target.directory>${project.build.outputDirectory}/sql</sql.resources.target.directory>
         <!-- This must be set to something known to exist. Override this
         property in M2_REPO/settings.xml to allow local settings. -->
         <local.property.overrides>${database.properties.file}</local.property.overrides> 
@@ -223,7 +225,7 @@
     <build>
         <resources>
             <resource>
-                <directory>${modules.root.dir}/application/sql</directory>
+                <directory>${sql.resources.src.directory}</directory>
                 <filtering>true</filtering>
                 <targetPath>sql</targetPath>
             </resource>
@@ -231,8 +233,7 @@
             <resource>
                 <directory>${modules.root.dir}/application/src/main/resources</directory>
             </resource>
-            <!-- redundant to the resource directory above, but necessary for
-            acceptance tests to be able to find their own resources. :( -->
+            <!-- necessary for acceptance tests to be able to find their own resources. :( -->
             <resource>
                 <directory>src/test/resources</directory>
             </resource>
@@ -266,9 +267,9 @@
                             </goals>
                             <configuration>
                                 <srcFiles>
-                                    <srcFile>${project.build.outputDirectory}/sql/create_database.sql</srcFile>
-                                    <srcFile>${project.build.outputDirectory}/sql/create_security.sql</srcFile>
-                                    <srcFile>${project.build.outputDirectory}/sql/security_data.sql</srcFile>
+                                    <srcFile>${sql.resources.target.directory}/create_database.sql</srcFile>
+                                    <srcFile>${sql.resources.target.directory}/create_security.sql</srcFile>
+                                    <srcFile>${sql.resources.target.directory}/security_data.sql</srcFile>
                                 </srcFiles>
                             </configuration>
                         </execution>
