created common/ module, moved some common files there:
* exceptions
* ClasspathResource.java

also updated Eclipse build system to use common/ module


git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14260 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <url>http://www.mifos.org</url>
 
     <modules>
+        <module>common</module>
         <module>testFramework</module>
         <module>serviceInterfaces</module>
         <module>application</module>
