--- a/application/pom.xml
+++ b/application/pom.xml
@@ -48,6 +48,11 @@
    <dependencies>
       <dependency>
          <groupId>org.mifos</groupId>
+         <artifactId>cheetah-common</artifactId>
+         <version>0.0.3-SNAPSHOT</version>
+      </dependency>      
+      <dependency>
+         <groupId>org.mifos</groupId>
          <artifactId>cheetah-serviceInterfaces</artifactId>
          <version>0.0.3-SNAPSHOT</version>
       </dependency>      
