--- a/userInterface/pom.xml
+++ b/userInterface/pom.xml
@@ -21,6 +21,11 @@
    <dependencies>
       <dependency>
          <groupId>org.mifos</groupId>
+         <artifactId>cheetah-common</artifactId>
+         <version>0.0.3-SNAPSHOT</version>
+      </dependency>      
+      <dependency>
+         <groupId>org.mifos</groupId>
          <artifactId>cheetah</artifactId>
          <version>0.0.3-SNAPSHOT</version>
       </dependency>      
