added selenium.browser.start.command to jdbc.local.properties - to handle the case where there is no .mifos file.
TODO: rename this file to default.properties or something like it to indicate that it's not just for jdbc properties


git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14278 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/resources/continuous-integration/acceptance/jdbc.local.properties
+++ b/resources/continuous-integration/acceptance/jdbc.local.properties
@@ -2,3 +2,4 @@ jdbc.database=hudson_mifos_cheetah_acceptance
 jdbc.url=jdbc:mysql://localhost:3306/${jdbc.database}
 jdbc.username=hudson
 jdbc.password=hudson
+selenium.browser.start.command=*firefox
