* ignore build products for cheetah "common" module * use more appropriate final build product names for testFramework and   acceptanceTests modules
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14554 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/testFramework/pom.xml
+++ b/testFramework/pom.xml
@@ -173,7 +173,7 @@
         </dependency>          
     </dependencies>
     <build>
-        <finalName>mifos</finalName>
+        <finalName>cheetah-testFramework</finalName>
         <defaultGoal>jar:jar</defaultGoal>
         <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
         <scriptSourceDirectory>${basedir}/src/main/scripts</scriptSourceDirectory>
