--- a/acceptanceTests/pom.xml
+++ b/acceptanceTests/pom.xml
@@ -302,7 +302,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>cheetah-testing</finalName>
+        <finalName>cheetah-acceptanceTests</finalName>
         <defaultGoal>integration-test</defaultGoal>
         <sourceDirectory>${modules.root.dir}/acceptanceTests/src/main/java</sourceDirectory>
         <scriptSourceDirectory>${modules.root.dir}/acceptanceTests/src/main/scripts</scriptSourceDirectory>
