Rename Cheetah Test Framework artifact to match convention used in other cheetah modules.
cheetahTestFramework -> cheetah-testFramework


git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14555 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
         <dependencies>
             <dependency>
                 <groupId>org.mifos</groupId>
-                <artifactId>cheetahTestFramework</artifactId>
+                <artifactId>cheetah-testFramework</artifactId>
                 <version>0.0.3-SNAPSHOT</version>
             </dependency>      
             <dependency>
