--- a/acceptanceTests/pom.xml
+++ b/acceptanceTests/pom.xml
@@ -236,7 +236,7 @@
         <!-- from parent pom -->
         <dependency>
             <groupId>org.mifos</groupId>
-            <artifactId>cheetahTestFramework</artifactId>
+            <artifactId>cheetah-testFramework</artifactId>
         </dependency>      
         <dependency>
             <groupId>org.springframework</groupId>
