--- a/testFramework/pom.xml
+++ b/testFramework/pom.xml
@@ -2,7 +2,7 @@
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.mifos</groupId>
-    <artifactId>cheetahTestFramework</artifactId>
+    <artifactId>cheetah-testFramework</artifactId>
     <packaging>jar</packaging>
     <version>0.0.3-SNAPSHOT</version>
     <name>Mifos - Cheetah Test Framework</name>
