--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -31,7 +31,7 @@
       </dependency>      
       <dependency>
          <groupId>org.mifos</groupId>
-         <artifactId>cheetahTestFramework</artifactId>
+         <artifactId>cheetah-testFramework</artifactId>
       </dependency>      
       <dependency>
          <groupId>org.springframework</groupId>
